packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-16/fixed.js
var ProgressReporter = function () {

  this.values = [];

  this.onInput = function() {
    this.values.push(42);
  }

  this.onStart = function() {
    this.values = [];
  }
}

var pr = new ProgressReporter();
c.onInput();
